button hover effect added

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <div class="banner" style="background-image: url('https://images.unsplash.com/photo-1580207762145-0ef778b47468?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1374&q=80');">
     <div class="container">
       <h1>The world is in a state of constant change</h1>
-      <a href="mailto:alex.nnenna.okoro@gmail.com">Captivate it</a >
+      <a href="mailto:alex.nnenna.okoro@gmail.com" class="btn-email">Captivate it</a >
     </div>
   </div>
 
